# plwm

./: .gitignore  AUTHORS  Cargo.toml  Dockerfile  LICENSE  Makefile  diff.txt  plwm.desktop  swi.patch
.github/workflows/: build-nightly.yml
config/: config.pl  plwm-scryer.desktop  plwm-swi.desktop
debian/: postinst  prerm
docs/: README.md  development_guide.md  plwm.1
src/: animation.pl  compat.pl  fifo.pl  layout.pl  menu.pl  plwm  plwm-scryer  plwm.pl  plx.c  plx.pl  setting.pl  stubs.pl  utils.pl  xf86names.pl
src/scryer/: compat.pl  init.pl  plx.pl  sys.pl  x11plwm.c
src/swi/: compat.pl  init.pl
symlinks/: plwm-scryer
tests/: check_all.sh  get_coverage.sh  run_unit_tests.sh
tests/unit_tests/: animation.plt  fifo.plt  layout.plt  menu.plt  setting.plt  utils.plt
tools/: generate_release.sh  install.sh  uninstall.sh
tools/extra/: Cargo.toml  Makefile  plwm-scryer
